--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
 
         <audio id="stream1" src="https://myradio24.org/37113" crossorigin="anonymous"></audio>
-        <audio id="stream2" src="https://myradio24.org/54297" crossorigin="anonymous"></audio>
+        <audio id="stream2" src="#" crossorigin="anonymous"></audio>
         <audio id="stream3" src="#"></audio>
         <audio id="stream4" src="#"></audio>
 
