--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
     //---------------------------------------------------------\\
 
 
-    const REAL_PASSWORD = "1234"; // ← УСТАНОВИ СВОЙ ПАРОЛЬ
+    const REAL_PASSWORD = "F3$t_Y[L.7]"; // ← УСТАНОВИ СВОЙ ПАРОЛЬ
     const PROTECT_DIV = document.getElementById("password-protect");
     const MAX_ATTEMPTS = 5;
 
