--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
     //---------------------------------------------------------\\
 
 
-    const REAL_PASSWORD = "F3$t_Y[L.7]"; // ← УСТАНОВИ СВОЙ ПАРОЛЬ
+    const REAL_PASSWORD = "F3$t_Yಸ್ಟೈ[L.7]නිប័ទ្មफ्रीⵉⴱ式"; // ← УСТАНОВИ СВОЙ ПАРОЛЬ
     const PROTECT_DIV = document.getElementById("password-protect");
     const MAX_ATTEMPTS = 5;
 
